# lecture_editor

./: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: app.ts  commands.ts  main.ts  wasm.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: diagnostics-bar.ts  editor-pane.ts  modal.ts  preview-pane.ts  workspace-tree.ts
