[package]
name = "lecture-editor"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[package.metadata.bundle]
name = "Lecture Editor"
identifier = "dev.lectureditor"
icon = ["icons/icon.ico"]

[dependencies]
tauri               = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
tauri-commands      = { path = "../../tauri-commands" }
md-core             = { path = "../../md-core" }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
